# test-bot

./: .pre-commit-config.yaml  README.md  example.env  pyproject.toml  tox.ini
bot/: __init__.py  __main__.py  bot.py  log.py
bot/backend/: admin.py  delete.py  error_handler.py  extensions.py  gateway_logger.py  logging.py  meta.py
bot/cogs/: gateway_logger.py
bot/utils/: messages.py  views.py
