[tool.poetry]
name = "test_bot"
version = "0.1.0"
description = "Bot for testing discord.py and other things."
authors = ["aru <genericusername414@gmail.com>"]
license = "MIT"
packages = [
    { include = "bot" },
]

[tool.poetry.dependencies]
python = "~=3.8"
aiohttp = "~=3.8.5"
colorama = { version = "~=0.4.3", markers = "sys_platform == 'win32'" }
coloredlogs = "~=14.0"
disnake = {git = "https://github.com/DisnakeDev/disnake", rev='master'}
arrow = "^1.2.3"


[tool.poetry.dev-dependencies]
black = "^22.2"
flake8 = "~=3.8"
flake8-annotations = "~=2.3"
flake8-bugbear = "~=20.1"
flake8-docstrings = "~=1.5"
flake8-isort = "^4.0.0"
flake8-string-format = "~=0.3"
flake8-tidy-imports = "~=4.1"
flake8-todo = "~=0.7"
isort = "^5.10.1"
pre-commit = "~=2.1"
taskipy = "~=1.7.0"
python-dotenv = "~=0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.taskipy.tasks]
export = 'poetry export --without-hashes -o requirements.txt'
start = "python -m bot"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
